src/scss/style.scss
/*
 * https://github.com/morethanwords/tweb
 * Copyright (C) 2019-2021 Eduard Kuzmenko
 * https://github.com/morethanwords/tweb/blob/master/LICENSE
 */

$placeholder-color: #9e9e9e;
$border-radius: 8px;
$border-radius-medium: 10px;
$border-radius-big: 12px;

$hover-alpha: .08;

//$small-screen: 720px;
$small-screen: 600px;
//$small-screen: 900px;
$medium-screen: 1275px;
$large-screen: 1680px;
//$large-screen: 16800px;

$floating-left-sidebar: 925px;
$messages-container-width: 728px;

$chat-input-size: 3.375rem;
$chat-input-handhelds-size: 2.875rem;
$chat-padding: .8125rem;
$chat-padding-handhelds: .5rem;
$chat-input-inner-padding: .5rem;
$chat-input-inner-padding-handhelds: .25rem;

@function hover-color($color) {
  @return rgba($color, $hover-alpha);
}

/* @mixin safari-overflow() {
  html.is-safari & {
    -webkit-mask-image: -webkit-radial-gradient(circle, white 100%, black 100%);
    @content;
  }
} */

@import "mixins/hover";
@import "mixins/respondTo";
@import "mixins/textOverflow";
@import "mixins/animationLevel";

:root {
  --vh: 1vh;
  --z-below: -1;
  --hover-alpha: #{$hover-alpha};

  --transition-standard-easing: cubic-bezier(.4, .0, .2, 1);
  --transition-standard-in-time: .3s;
  --transition-standard-out-time: .25s;
  --transition-standard-in: var(--transition-standard-in-time) var(--transition-standard-easing);
  --transition-standard-out: var(--transition-standard-out-time) var(--transition-standard-easing);
  
  --pm-transition: .2s ease-in-out;
  --layer-transition: .2s cubic-bezier(.4, .0, .2, 1);
  --slide-header-transition: .4s ease-in-out;
  --tabs-transition: .25s ease-in-out;
  --btn-menu-transition: .2s cubic-bezier(.4, 0, .2, 1);
  --esg-transition: var(--btn-menu-transition);
  --popup-transition-function: cubic-bezier(.4, 0, .2, 1);
  --popup-transition-time: .15s;
  //--layer-transition: .3s cubic-bezier(.33, 1, .68, 1);
  //--layer-transition: none;
  --btn-corner-transition: .2s cubic-bezier(.34, 1.56, .64, 1);
  --chatlist-badge-transition-in: .2s cubic-bezier(.35,.35,.47,1); // 1.34
  --chatlist-badge-transition-out: .2s cubic-bezier(.35,.35,.7,1);
  --message-handhelds-margin: 5.5625rem;
  --message-beside-button-margin: 2.875rem;
  --message-time-background: rgba(0, 0, 0, .35);
  --message-highlightning-color: hsla(85.5319, 36.9171%, 40.402%, .4);//rgba(77, 142, 80, .4);
  --messages-container-width: #{$messages-container-width};
  --messages-text-size: 16px;
  --messages-secondary-text-size: calc(var(--messages-text-size) - 2px);
  --line-height: 1.3125;
  --esg-sticker-size: 80px;
  --disabled-opacity: .3;
  --round-video-size: 280px;

  // https://github.com/overtake/TelegramSwift/blob/5cc7d2475fe4738a6aa0486c23eaf80a89d33b97/submodules/TGUIKit/TGUIKit/PresentationTheme.swift#L2054
  --peer-avatar-red-top: #ff885e;
  --peer-avatar-red-bottom: #ff516a;
  --peer-avatar-orange-top: #ffcd6a;
  --peer-avatar-orange-bottom: #ffa85c;
  --peer-avatar-violet-top: #82b1ff;
  --peer-avatar-violet-bottom: #665fff;
  --peer-avatar-green-top: #a0de7e;
  --peer-avatar-green-bottom: #54cb68;
  --peer-avatar-cyan-top: #53edd6;
  --peer-avatar-cyan-bottom: #28c9b7;
  --peer-avatar-blue-top: #72d5fd;
  --peer-avatar-blue-bottom: #2a9ef1;
  --peer-avatar-pink-top: #e0a2f3;
  --peer-avatar-pink-bottom: #d669ed;

  @include respond-to(handhelds) {
    --right-column-width: 100vw;
    --esg-sticker-size: 68px;

    --chat-input-size: #{$chat-input-handhelds-size};
    --chat-input-padding: #{$chat-padding-handhelds};
    --chat-input-inner-padding: #{$chat-input-inner-padding-handhelds};
  }

  @include respond-to(not-handhelds) {
    --right-column-width: calc(#{$large-screen} / 4);

    --chat-input-size: #{$chat-input-size};
    --chat-input-padding: #{$chat-padding};
    --chat-input-inner-padding: #{$chat-input-inner-padding};
  }

  @include respond-to(esg-bottom) {
    --chat-input-size: #{$chat-input-handhelds-size};
    --chat-input-inner-padding: #{$chat-input-inner-padding-handhelds};
  }

  @include respond-to(only-medium-screens) {
    --right-column-width: 25vw;
  }
}

@mixin splitColor($property, $color, $light: true, $dark: true) {
  --#{$property}: #{$color};

  @if $light != false {
    --light-#{$property}: #{hover-color($color)};
  }

  @if $dark != false {
    --dark-#{$property}: #{darken($color, $hover-alpha * 100)};
  }
}

:root {
  // * Day theme
  --body-background-color: #fff;
  --background-color-true: #f4f4f5;
  --background-color: #fff;
  --border-color: #dfe1e5;
  --surface-color: #fff;
  --scrollbar-color: rgba(0, 0, 0, .2);

  --input-search-background-color: #fff;
  --input-search-border-color: #dfe1e5;

  @include splitColor(primary-color, #3390ec, true, true);
  --primary-text-color: #000;

  --secondary-color: #c4c9cc;
  @include splitColor(secondary-text-color, #707579, true, false);

  @include splitColor(danger-color, #df3f40, true, false);

  --avatar-online-color: #0ac630;
  --avatar-color-top: var(--peer-avatar-blue-top);
  --avatar-color-bottom: var(--peer-avatar-blue-bottom);
  --chatlist-status-color: var(--avatar-online-color);
  --chatlist-pinned-color: #a2abb2;
  --badge-text-color: #fff;
  --link-color: #00488f;
  --ripple-color: rgba(0, 0, 0, .08);
  --poll-circle-color: var(--border-color);

  --message-background-color: var(--surface-color);
  --message-checkbox-color: #61c642;
  --message-checkbox-border-color: #fff;
  --message-secondary-color: var(--secondary-color);

  @include splitColor(message-out-background-color, #eeffde, true, true);
  --message-out-link-color: var(--link-color);
  --message-out-primary-color: #4fae4e;
  --message-out-status-color: var(--message-out-primary-color);
  --message-out-audio-play-button-color: #fff;

  // * Day theme end
}
/* ... */

